# ReadyTensor

./: .env  .gitignore  LICENSE  README.md  __init__.py  main.py  pyproject.toml  setup.py
ReadyTensor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: __init__.py  config.json  prompts.yaml  tracked_files.yaml
config/scoring/: code_quality_criteria.yaml  dependancies_criteria.yaml  documentation_criteria.yaml  license_criteria.yaml  structure_criteria.yaml
core/: __init__.py  analyzer.py  repository.py  scorer.py  validators.py
llm/: __init__.py  client.py  parsers.py  prompts.py
utils/: __init__.py  config.py  document_processor.py  file_ops.py  reports.py
