[project]
name = "ReadyTensor"
version = "1.0.0"
description = "Lightweight repository assessment tool"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.3.0",
    "gitpython>=3.1.44", 
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "tiktoken>=0.5.0",
    "pydantic>=2.0.0"
]

[project.scripts]
rt-repo-lite = "ReadyTensor.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
